snapshots/syntax/expressions/simple_multiplication.snap
---
source: src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "4"
            - kind: Whitespace
              text: " "
            - kind: MultiplicationOperator
              text: "*"
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "5"
        - kind: Newline
          text: "\n"
